Lets make this application work